Fix spacing and icon display

--- a/styles/designs/cosmos/parts/notes/_notes-components.scss
+++ b/styles/designs/cosmos/parts/notes/_notes-components.scss
@@ -19,11 +19,7 @@ $Notes--Iconned__Title: (
         font-weight: normal,
         border-bottom: solid 0.2rem,
         border-color: enum('ValueSet:::REQUIRED'),
-        padding-left: enum('ValueSet:::REQUIRED'),
-        padding-right: v-spacing(1),
         position: relative,
-        padding-top: v-spacing(2),
-        padding-bottom: v-spacing(0), 
     )
 );
 
@@ -36,7 +32,9 @@ $Notes--Iconned__Title__Icon: (
         height: enum('ValueSet:::REQUIRED'),
         width: enum('ValueSet:::REQUIRED'),
         content: "''",
-        position: absolute,
+        position: relative,
+        display: inline-block,
+        padding-right: 0.5rem,
         left: 0,
         bottom: enum('ValueSet:::REQUIRED'),
     )
@@ -49,7 +47,7 @@ $Notes--Iconned__Body: (
         font-family: enum('ValueSet:::REQUIRED'),
         font-size: font-scale(0),
         line-height: line-height(0),
-        padding: v-spacing(1),
+        padding-top: v-spacing(1),
         padding-bottom: v-spacing(0),
         border-bottom: solid 0.2rem,
         border-color: enum('ValueSet:::REQUIRED'),
